--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,10 @@
 [workspace]
 resolver = "2"
-members = [
-    "crates/*",
-]
+members = ["crates/*"]
 
 [workspace.package]
 authors = ["Fuel Labs <contact@fuel.sh>"]
-keywords = [ "blockchain", "crypto"]
+keywords = ["blockchain", "crypto"]
 edition = "2021"
 homepage = "https://fuel.network/"
 license = "BUSL-1.1"
@@ -34,11 +32,18 @@ fuel-core = { version = "0.40.2", default-features = false, features = [
     "relayer",
     "rocksdb",
 ] }
-fuel-core-client = { version = "0.40.2", default-features = false, features = ["std"] }
+fuel-core-client = { version = "0.40.2", default-features = false, features = [
+    "std",
+] }
 fuel-core-importer = { version = "0.40.2" }
 fuel-core-storage = { version = "0.40.2" }
-fuel-core-types = { version = "0.40.2", default-features = false, features = ["std", "serde"] }
-fuel-core-services = { version = "0.40.2", default-features = false, features = ["test-helpers"] }
+fuel-core-services = { version = "0.40.2", default-features = false, features = [
+    "test-helpers",
+] }
+fuel-core-types = { version = "0.40.2", default-features = false, features = [
+    "std",
+    "serde",
+] }
 futures-util = "0.3"
 hex = "0.4"
 mockall = "0.13"
@@ -57,3 +62,5 @@ tracing-subscriber = "0.3"
 thiserror = "2.0"
 
 
+# Workspace members
+fuel-core-interfacing = { path = "crates/fuel-core-interfacing" }
