--- a/crates/fuel-core-interfacing-types/Cargo.toml
+++ b/crates/fuel-core-interfacing-types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "fuel-core-interfacing"
-description = "Adapters and Interfaces used for integrating fuel client node i.e. wrapping FuelLabs/fuel-core"
+name = "fuel-core-interfacing-types"
+description = "Types for integrating fuel client node"
 authors = { workspace = true }
 keywords = { workspace = true }
 edition = { workspace = true }
@@ -20,7 +20,6 @@ clap = { workspace = true }
 derive_more = { version = "1.0", features = ["full"] }
 displaydoc = { workspace = true }
 dotenvy = { workspace = true }
-elasticsearch = "8.15.0-alpha.1"
 fuel-core = { workspace = true }
 fuel-core-bin = { workspace = true }
 fuel-core-client = { workspace = true }
@@ -28,7 +27,6 @@ fuel-core-importer = { workspace = true }
 fuel-core-services = { workspace = true }
 fuel-core-storage = { workspace = true }
 fuel-core-types = { workspace = true }
-fuel-core-interfacing-types = { workspace = true }
 futures = { workspace = true }
 num_cpus = "1.16"
 parking_lot = { version = "0.12", features = ["serde"] }
