Update root workspace with new definitions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,6 @@ thiserror = "2.0"
 
 
 # Workspace members
-fuel-core-interfacing = { path = "crates/fuel-core-interfacing" }
-fuel-core-interfacing-types = { path = "crates/fuel-core-interfacing-types" }
+fuel-node = { path = "crates/fuel-node" }
 fuel-data-nats = { path = "crates/fuel-data-nats" }
+fuel-data-types = { path = "crates/fuel-data-types" }
