--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ hex = "0.4"
 mockall = "0.13"
 mockall_double = "0.3.1"
 pretty_assertions = "1.4"
+prost = "0.13"
+prost-types = "0.13"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 rayon = "1.10.0"
