Re-organize `fuel-data-proto-types`

--- a/crates/fuel-data-proto-types/Cargo.toml
+++ b/crates/fuel-data-proto-types/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fuel-data-protos"
+name = "fuel-data-proto-types"
 authors.workspace = true
 keywords.workspace = true
 edition.workspace = true
