--- a/crates/fuel-data-proto-types/Cargo.toml
+++ b/crates/fuel-data-proto-types/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "fuel-data-proto-types"
+description = "Fuel data Protobuf data transfer schema definitions"
 authors.workspace = true
 keywords.workspace = true
 edition.workspace = true
@@ -12,6 +13,7 @@ version.workspace = true
 [dependencies]
 prost = { workspace = true }
 prost-types = { workspace = true }
+fuel-node = { workspace = true }
 
 [build-dependencies]
 prost-build = "0.13"
