--- a/crates/fuel-data-types/Cargo.toml
+++ b/crates/fuel-data-types/Cargo.toml
@@ -25,5 +25,6 @@ fuel-core-types = { workspace = true, default-features = false, features = [
     "serde",
 ] }
 fuel-node = { workspace = true, features = ["types"] }
+fuel-data-proto-types = { workspace = true }
 hex = { workspace = true }
 serde = { workspace = true }
