--- a/.env.sample
+++ b/.env.sample
@@ -17,5 +17,6 @@ RESERVED_NODES=/dnsaddr/mainnet.fuel.network
 
 # NATS Configuration
 NATS_URL=nats://localhost:4222
+NATS_ADMIN_PASSWORD=some-nats-password
 
 
