--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,3 +68,4 @@ thiserror = "2.0"
 fuel-node = { path = "crates/fuel-node" }
 fuel-data-nats = { path = "crates/fuel-data-nats" }
 fuel-data-types = { path = "crates/fuel-data-types" }
+fuel-data-proto-types = { path = "crates/fuel-data-proto-types" }
