--- a/crates/fuel-data-nats/nats.conf
+++ b/crates/fuel-data-nats/nats.conf
@@ -1,6 +1,6 @@
 port = 4222
 http_port = 8222
-server_name = "live-publisher-nats-server"
+server_name = "fuel-nats-server"
 
 authorization = {
     timeout = 5
@@ -24,5 +24,21 @@ authorization = {
     ]
 }
 
+# JetStream Configuration
+jetstream = {
+    max_file_store = 21474836480  # 20GB
+}
+
 # Maximum Payload Size
 max_payload = 8388608  # 8MB
+
+# WebSocket Configuration
+websocket = {
+    port = 8443
+    no_tls = true
+    same_origin = false
+    allowed_origins = []
+    compression = false
+    handshake_timeout = "10s"
+    no_auth_user = default_user
+}
