--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  live-publisher-nats:
+  relay-node-nats:
     image: nats:latest
     restart: always
     ports:
@@ -7,11 +7,11 @@ services:
       - 8222:8222
       - 8443:8443
     volumes:
-      - ../crates/fuel-data-live-publisher/nats.conf:/etc/nats/nats.conf
+      - ../crates/fuel-nodes/fuel-relay-node/nats.conf:/etc/nats/nats.conf
     command: [-m, '8222', --js, --config=/etc/nats/nats.conf, -D]
     env_file:
       - ./../.env
-  historical-publisher-nats:
+  archive-node-nats:
     image: nats:latest
     restart: always
     ports:
@@ -19,7 +19,7 @@ services:
       - 8223:8222
       - 8444:8443
     volumes:
-      - ../crates/fuel-data-historical-publisher/nats.conf:/etc/nats/nats.conf
+      - ../crates/fuel-archive-node/nats.conf:/etc/nats/nats.conf
     command: [-m, '8222', --js, --config=/etc/nats/nats.conf, -D]
     env_file:
       - ./../.env
