--- a/fuel-data-cluster/docker/docker-compose.yml
+++ b/fuel-data-cluster/docker/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  relay-node-nats:
+  relay-nats:
     image: nats:latest
     restart: always
     ports:
@@ -7,11 +7,11 @@ services:
       - 8222:8222
       - 8443:8443
     volumes:
-      - ../fuel-nodes/fuel-relay-node/nats.conf:/etc/nats/nats.conf
+      - ./nats/relay-nats.conf:/etc/nats/nats.conf
     command: [-m, '8222', --js, --config=/etc/nats/nats.conf, -D]
     env_file:
-      - ./../.env
-  archive-node-nats:
+      - ./../../.env
+  archive-nats:
     image: nats:latest
     restart: always
     ports:
@@ -19,7 +19,7 @@ services:
       - 8223:8222
       - 8444:8443
     volumes:
-      - ../fuel-nodes/fuel-archive-node/nats.conf:/etc/nats/nats.conf
+      - ./archive-nats.conf:/etc/nats/nats.conf
     command: [-m, '8222', --js, --config=/etc/nats/nats.conf, -D]
     env_file:
-      - ./../.env
+      - ./../../.env
