Integrate cluster with `relay_node` partially

--- a/.env.sample
+++ b/.env.sample
@@ -15,8 +15,16 @@ RELAYER_V2_LISTENING_CONTRACTS=0xAEB0c00D0125A8a788956ade4f4F12Ead9f65DDf
 RELAYER_DA_DEPLOY_HEIGHT=20620434 
 RESERVED_NODES=/dnsaddr/mainnet.fuel.network
 
+# RELAY_NATS Configuration
+RELAY_NATS_URL=nats://localhost:4222
+RELAY_NATS_ADMIN_PASSWORD=some-nats-password
+
+# ARCHIVE_NATS Configuration
+ARCHIVE_NATS_URL=nats://localhost:4223
+ARCHIVE_NATS_ADMIN_PASSWORD=some-nats-password
+
 # NATS Configuration
-NATS_URL=nats://localhost:4222
-NATS_ADMIN_PASSWORD=some-nats-password
+NATS_URL=nats://localhost:4224
+NATS_ADMIN_PASSWORD=admin-nats-password
 
 
