--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,3 +76,4 @@ fuel-node = { path = "fuel-nodes/fuel-node" }
 fuel-data-nats = { path = "fuel-data-crates/fuel-data-nats" }
 fuel-data-types = { path = "fuel-data-crates/fuel-data-types" }
 fuel-data-proto-types = { path = "fuel-data-crates/fuel-data-proto-types" }
+fuel-data-cluster = { path = "fuel-data-cluster" }
