--- a/fuel-data-edges/fuel-data-edge/Cargo.toml
+++ b/fuel-data-edges/fuel-data-edge/Cargo.toml
@@ -10,3 +10,9 @@ rust-version.workspace = true
 version.workspace = true
 
 [dependencies]
+prost = { workspace = true }
+prost-types = { workspace = true }
+
+[build-dependencies]
+prost-build = "0.13"
+protoc-bin-vendored = "3.1.0"
