--- a/fuel-data-edges/fuel-data-grpc-edge/Cargo.toml
+++ b/fuel-data-edges/fuel-data-grpc-edge/Cargo.toml
@@ -13,7 +13,5 @@ version.workspace = true
 tonic = "0.12"
 prost = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
-
-[build-dependencies]
-tonic-build = "0.12"
-protoc-bin-vendored = "3.1.0"
+fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
+tokio-stream = { workspace = true }
