--- a/fuel-data-protos/Cargo.toml
+++ b/fuel-data-protos/Cargo.toml
@@ -14,6 +14,7 @@ fuel-node = { workspace = true, optional = true }
 tonic = "0.12"
 prost = { workspace = true }
 prost-types = { workspace = true }
+serde = { workspace = true }
 
 [build-dependencies]
 tonic-build = "0.12"
