--- a/fuel-data-sdks/fuel-data-rs/Cargo.toml
+++ b/fuel-data-sdks/fuel-data-rs/Cargo.toml
@@ -10,3 +10,9 @@ rust-version.workspace = true
 version.workspace = true
 
 [dependencies]
+fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
+prost = { workspace = true }
+serde_json = { workspace = true }
+tonic = "0.12"
+tokio-stream = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
