--- a/fuel-data-edges/fuel-data-grpc-edge/Cargo.toml
+++ b/fuel-data-edges/fuel-data-grpc-edge/Cargo.toml
@@ -10,8 +10,14 @@ rust-version.workspace = true
 version.workspace = true
 
 [dependencies]
-tonic = "0.12"
+anyhow = { workspace = true }
+async-nats = { workspace = true }
+dotenvy = { workspace = true }
 prost = { workspace = true }
+serde_json = { workspace = true }
+tonic = "0.12"
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
+fuel-data-cluster = { workspace = true }
+fuel-data-nats = { workspace = true }
 tokio-stream = { workspace = true }
