--- a/fuel-data-sdks/fuel-data-streams-ts/package.json
+++ b/fuel-data-sdks/fuel-data-streams-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fuel-data-streams",
+  "name": "fuel-data-streams-ts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
