--- a/fuel-data-sdks/fuel-data-streams-rs/Cargo.toml
+++ b/fuel-data-sdks/fuel-data-streams-rs/Cargo.toml
@@ -13,6 +13,7 @@ version.workspace = true
 fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
 prost = { workspace = true }
 serde_json = { workspace = true }
+thiserror = { workspace = true }
 tonic = "0.12"
 tokio-stream = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
