--- a/fuel-data-sdks/fuel-data-rs/Cargo.toml
+++ b/fuel-data-sdks/fuel-data-rs/Cargo.toml
@@ -10,8 +10,11 @@ rust-version.workspace = true
 version.workspace = true
 
 [dependencies]
-fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
+async-trait = { workspace = true }
 prost = { workspace = true }
+prost-types = { workspace = true }
+fuel-data-types = { workspace = true }
+fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 tonic = "0.12"
