--- a/fuel-data-edges/fuel-data-edge/Cargo.toml
+++ b/fuel-data-edges/fuel-data-edge/Cargo.toml
@@ -9,6 +9,9 @@ repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 prost = { workspace = true }
 prost-types = { workspace = true }
