--- a/fuel-data-edges/fuel-data-graphql-edge/Cargo.toml
+++ b/fuel-data-edges/fuel-data-graphql-edge/Cargo.toml
@@ -9,4 +9,8 @@ repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
 
+[[bin]]
+name = "fuel-data-graphql-edge"
+path = "src/main.rs"
+
 [dependencies]
