--- a/fuel-data-edges/fuel-data-grpc-edge/Cargo.toml
+++ b/fuel-data-edges/fuel-data-grpc-edge/Cargo.toml
@@ -9,6 +9,10 @@ repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
 
+[[bin]]
+name = "fuel-data-grpc-edge"
+path = "src/main.rs"
+
 [dependencies]
 anyhow = { workspace = true }
 async-nats = { workspace = true }
