--- a/fuel-nodes/fuel-node/Cargo.toml
+++ b/fuel-nodes/fuel-node/Cargo.toml
@@ -11,6 +11,9 @@ version = { workspace = true }
 rust-version = { workspace = true }
 publish = false
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 anyhow = { workspace = true }
 async-nats = { workspace = true }
@@ -28,6 +31,7 @@ fuel-core-importer = { workspace = true }
 fuel-core-services = { workspace = true }
 fuel-core-storage = { workspace = true }
 fuel-core-types = { workspace = true }
+fuel-node-types = { workspace = true }
 futures = { workspace = true }
 num_cpus = "1.16"
 parking_lot = { version = "0.12", features = ["serde"] }
