Add chart for GrpcEdge

--- a/fuel-data-cluster/fuel-data-grpc-edge/Dockerfile
+++ b/fuel-data-cluster/fuel-data-grpc-edge/Dockerfile
@@ -14,7 +14,6 @@ COPY fuel-data-cluster/Cargo.toml fuel-data-cluster/
 COPY fuel-nodes/fuel-node-types/Cargo.toml fuel-nodes/fuel-node-types/
 COPY fuel-data-sdks/fuel-data-rs/Cargo.toml fuel-data-sdks/fuel-data-rs/
 
-
 # Generate the dependency recipe
 RUN cargo chef prepare --recipe-path recipe.json
 
@@ -31,7 +30,11 @@ RUN rm -f rust-toolchain.toml
 
 WORKDIR /app/fuel-data-edges/fuel-data-grpc-edge
 
-RUN cargo build --release --no-default-features -p fuel-data-grpc-edge
+# Build the binary and specify the target directory
+RUN cargo build --release --no-default-features -p fuel-data-grpc-edge --target-dir /app/target
+
+# Debug: Verify binary existence
+RUN ls -l /app/target/release
 
 # Stage 3: Runtime
 FROM ubuntu:22.04
@@ -41,8 +44,14 @@ WORKDIR /usr/src
 RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates curl \
     && rm -rf /var/lib/apt/lists/*
 
+# Set environment variables for NATS
+ENV NATS_URL=nats://localhost:4222
+
 # Copy the built binary
-COPY --from=builder /app/fuel-data-edges/fuel-data-grpc-edge/target/release/fuel-data-grpc-edge /usr/src/fuel-data-grpc-edge
+COPY --from=builder /app/target/release/fuel-data-grpc-edge /usr/src/fuel-data-grpc-edge
+
+# Expose the gRPC server port
+EXPOSE 50051
 
 # Set the entry point
 ENTRYPOINT ["/usr/src/fuel-data-grpc-edge"]
