--- a/fuel-data-cluster/relay-nats/.conf
+++ b/fuel-data-cluster/relay-nats/.conf
@@ -19,7 +19,7 @@ authorization = {
 
     # Users Definition
     users = [
-        { user = admin, password = $NATS_ADMIN_PASSWORD, permissions = $ADMIN },  # Admin with full permissions
+        { user = admin, password = $RELAY_NATS_ADMIN_PASSWORD, permissions = $ADMIN },  # Admin with full permissions
         { user = default_user, permissions = $default_permissions }  # Default user with restricted permissions
     ]
 }
