Allow historical publishing in `fuel-archive-nodes`

--- a/.env.testnet.sample
+++ b/.env.testnet.sample
@@ -18,6 +18,12 @@ RELAY_NODE_SERVICE_NAME=fuel-relay-node-testnet
 RELAY_NATS_URL=nats://relay-nats:4222
 RELAY_NATS_ADMIN_PASSWORD=some-nats-password
 
+# ARCHIVE_NODE Configuration
+ARCHIVE_NODE_PORT=4001
+ARCHIVE_NODE_P2P_PORT=30334
+ARCHIVE_NODE_DB_PATH=db/fuel-archive-node
+ARCHIVE_NODE_SERVICE_NAME=fuel-archive-node-mainnet
+
 # ARCHIVE_NATS Configuration
 ARCHIVE_NATS_URL=nats://archive-nats:4223
 ARCHIVE_NATS_ADMIN_PASSWORD=some-nats-password
