--- a/fuel-data-cluster/fuel-data-grpc-edge/chart/values-local.yaml
+++ b/fuel-data-cluster/fuel-data-grpc-edge/chart/values-local.yaml
@@ -1,4 +1,4 @@
 image:
-  repository: k3d-localhost:2000/fuel-data-grpc-edge
+  repository: localhost:5000/fuel-data-grpc-edge
   tag: latest
   pullPolicy: Always
