--- a/fuel-data-cluster/Cargo.toml
+++ b/fuel-data-cluster/Cargo.toml
@@ -16,3 +16,8 @@ path = "src/lib.rs"
 
 [dependencies]
 dotenvy = { workspace = true }
+thiserror = { workspace = true }
+serde = { workspace = true }
+tracing = { workspace = true }
+kube = { version = "0.98.0", features = ["runtime", "derive"] }
+k8s-openapi = { version = "0.24.0", features = ["latest"] }
