--- a/fuel-data-cluster/fuel-relay-node/chart/values-local.yaml
+++ b/fuel-data-cluster/fuel-relay-node/chart/values-local.yaml
@@ -1,4 +1,4 @@
 image:
-  repository: k3d-localhost:2000/fuel-relay-node
+  repository: localhost:5000/fuel-relay-node
   tag: latest
   pullPolicy: always
