Re-Introduce `fuel-data-subjects`
The subjects are NATS-decoupled and should be re-usable
for other messaging systems like Kafka/RabbitMQ/ActiveMQ etc.
For NATS, they expose a `to_nats_subject` and their Filters expose
a `to_nats_subject_filter` API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,7 +74,7 @@ thiserror = "2.0"
 
 
 # Workspace members
-fuel-data-nats = { path = "fuel-data-crates/fuel-data-nats" }
+fuel-data-subjects = { path = "fuel-data-crates/fuel-data-subjects" }
 fuel-data-types = { path = "fuel-data-crates/fuel-data-types" }
 fuel-data-protos = { path = "fuel-data-protos" }
 fuel-data-cluster = { path = "fuel-data-cluster" }
