Allow edge streaming from all NATS instances including scaled ones

--- a/fuel-data-edges/fuel-data-grpc-edge/Cargo.toml
+++ b/fuel-data-edges/fuel-data-grpc-edge/Cargo.toml
@@ -24,4 +24,5 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 fuel-data-protos = { workspace = true, features = ["fuel-data-grpc-edge"] }
 fuel-data-cluster = { workspace = true }
 fuel-data-subjects = { workspace = true }
+fuel-data-edge = { workspace = true }
 tokio-stream = { workspace = true }
