--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,10 +74,13 @@ thiserror = "2.0"
 
 
 # Workspace members
-fuel-data-subjects = { path = "fuel-data-crates/fuel-data-subjects" }
-fuel-data-types = { path = "fuel-data-crates/fuel-data-types" }
 fuel-data-protos = { path = "fuel-data-protos" }
 fuel-data-cluster = { path = "fuel-data-cluster" }
+
 fuel-node = { path = "fuel-nodes/fuel-node" }
 fuel-node-types = { path = "fuel-nodes/fuel-node-types" }
 fuel-node-publishing = { path = "./fuel-nodes/fuel-node-publishing" }
+
+fuel-data-edge = { path = "fuel-data-edges/fuel-data-edge" }
+fuel-data-types = { path = "fuel-data-crates/fuel-data-types" }
+fuel-data-subjects = { path = "fuel-data-crates/fuel-data-subjects" }
