--- a/fuel-data-edges/fuel-data-edge/Cargo.toml
+++ b/fuel-data-edges/fuel-data-edge/Cargo.toml
@@ -13,5 +13,13 @@ version.workspace = true
 path = "src/lib.rs"
 
 [dependencies]
+anyhow = { workspace = true }
+async-nats = { workspace = true }
+dotenvy = { workspace = true }
+fuel-data-cluster = { workspace = true }
+fuel-data-subjects = { workspace = true }
+futures = { workspace = true }
+thiserror = { workspace = true }
+tracing = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
